--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <div class="review__hover">
                 <div class="review__title">Константин Спилберг</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">2Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -422,7 +422,7 @@
               <div class="review__hover">
                 <div class="review__title">Елена</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">3Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -434,7 +434,7 @@
               <div class="review__hover">
                 <div class="review__title">Станислав</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">4Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -446,7 +446,7 @@
               <div class="review__hover">
                 <div class="review__title">Сергей</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">5Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -458,7 +458,7 @@
               <div class="review__hover">
                 <div class="review__title">Елизавета</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">6Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -470,7 +470,7 @@
               <div class="review__hover">
                 <div class="review__title">Виталий</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">7Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -482,7 +482,7 @@
               <div class="review__hover">
                 <div class="review__title">Артём</div>
                 <div class="review__button-wrap">
-                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                  <p class="review__shorttext">8Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
@@ -499,35 +499,35 @@
                 <div class="order__form-row order__form-row_double">
                   <label class="order__form-block">
                     <div class="order__form-label">Имя</div>
-                    <input class="order__form-input" name="name" type="text" placeholder="">
+                    <input class="order__form-input" name="name" type="name" placeholder="Имя">
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Телефон</div>
-                    <input class="order__form-input phone-mask" name="phone" type="text" placeholder="">
+                    <input class="order__form-input phone-mask" name="phone" type="tel" placeholder="+7 (999) 111-11-11" pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="18" maxlength="18">
                   </label>
                 </div>
                 <div class="order__form-row">
                   <label class="order__form-block">
                     <div class="order__form-label">Улица</div>
-                    <input class="order__form-input" name="street" type="text" placeholder="">
+                    <input class="order__form-input" name="street" type="text" placeholder="Улица">
                   </label>
                 </div>
                 <div class="order__form-row order__form-row_quatro">
                   <label class="order__form-block">
                     <div class="order__form-label">Дом</div>
-                    <input class="order__form-input" name="home" type="text" placeholder="">
+                    <input class="order__form-input" name="home" type="number" placeholder="Дом">
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Корпус</div>
-                    <input class="order__form-input" name="part" type="text" placeholder="">
+                    <input class="order__form-input" name="part" type="text" placeholder="Корпус">
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Квартира</div>
-                    <input class="order__form-input" name="appt" type="text" placeholder="">
+                    <input class="order__form-input" name="appt" type="number" placeholder="Квартира">
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Этаж</div>
-                    <input class="order__form-input" name="floor" type="text" placeholder="">
+                    <input class="order__form-input" name="floor" type="number" placeholder="Этаж">
                   </label>
                 </div>
               </div>
@@ -636,6 +636,7 @@
     <li class="fixed-menu__item"><a class="fixed-menu__link" href="" data-scroll-to="8"></a></li>
   </ul>
   <div class="full-review popup" id="full-review">
+    <div class="full-review__popup">
     <a class="full-review__close" href="#">
       <svg class="full-review__close-btn">
         <use xlink:href="./img/sprite/sprite.svg#close"></use>
@@ -646,6 +647,7 @@
       <div class="full-review__content">
       </div>
     </div>
+  </div>
   </div>
   <div class="status-popup popup" id="success">
     <div class="status-popup__inner">
