--- a/index.html
+++ b/index.html
@@ -658,16 +658,16 @@
     </div>
   </div>
   </div>
-  <div class="status-popup popup" id="success">
-    <div class="status-popup__inner">
+  <div class="status-popup__success" id="success">
+    <div class="status-popup__inner full-review__popup">
       <div class="status-popup__message">Сообщение отправлено</div>
-      <a class="status-popup__close btn" href="#">Закрыть</a>
+      <a class="status-popup__close btn" id="close-btn" href="#">Закрыть</a>
     </div>
   </div>
-  <div class="status-popup popup" id="error">
-    <div class="status-popup__inner">
+  <div class="status-popup__errors" id="errors">
+    <div class="status-popup__inner full-review__popup">
       <div class="status-popup__message error-message">Произошла ошибка</div>
-      <a class="status-popup__close btn" href="#">Закрыть</a>
+      <a class="status-popup__close btn" id="close-btn" href="#">Закрыть</a>
     </div>
   </div>
 
