--- a/index.html
+++ b/index.html
@@ -671,6 +671,7 @@
     </div>
   </div>
 
+<script src="./scripts/jquery-3.3.1.min.js"></script>
 <script src="./scripts/script.js"></script>
 </body>
 
