--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         <div class="container">
           <div class="section__title">Закажите доставку</div>
           <div class="order__form">
-            <form class="order__form-tag">
+            <form class="order__form-tag" method = "post">
               <div class="order__form-col">
                 <div class="order__form-row order__form-row_double">
                   <label class="order__form-block">
