--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/1.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Вера</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Вера</p>
                   <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -408,8 +408,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/2.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Константин Спилберг</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Константин Спилберг</p>
                   <p class="review__shorttext">2Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -420,8 +420,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/3.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Елена</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Елена</p>
                   <p class="review__shorttext">3Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -432,8 +432,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/4.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Станислав</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Станислав</p>
                   <p class="review__shorttext">4Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -444,8 +444,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/5.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Сергей</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Сергей</p>
                   <p class="review__shorttext">5Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -456,8 +456,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/6.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Елизавета</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Елизавета</p>
                   <p class="review__shorttext">6Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -468,8 +468,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/7.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Виталий</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Виталий</p>
                   <p class="review__shorttext">7Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -480,8 +480,8 @@
             <div class="review">
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/8.png')"></div>
               <div class="review__hover">
-                <div class="review__title">Артём</div>
                 <div class="review__button-wrap">
+                  <p class="review__title">Артём</p>
                   <p class="review__shorttext">8Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
                     быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
@@ -645,6 +645,7 @@
     <li class="fixed-menu__item"><a class="fixed-menu__link" href="" data-scroll-to="8"></a></li>
   </ul>
   <div class="full-review popup" id="full-review">
+
     <div class="full-review__popup">
     <a class="full-review__close" href="#">
       <svg class="full-review__close-btn">
@@ -652,9 +653,8 @@
       </svg>
     </a>
     <div class="full-review__inner">
-      <div class="full-review__title"></div>
-      <div class="full-review__content">
-      </div>
+      <div class="full-review__title">Константин Спилберг</div>
+      <div class="full-review__content"></div>
     </div>
   </div>
   </div>
