--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
       </svg>
     </a>
     <div class="full-review__inner">
-      <div class="full-review__title">Константин Спилберг</div>
+      <div class="full-review__title"></div>
       <div class="full-review__content"></div>
     </div>
   </div>
