--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Телефон</div>
-                    <input class="order__form-input phone-mask" name="phone" type="tel" placeholder="+7 (999) 111-11-11"
-                      required>
+                    <input class="order__form-input phone-mask phone" name="phone" type="text" placeholder="+7 (999) 111-11-11"
+                     required>
                       <div class="order__form-error"></div>
                   </label>
                 </div>
@@ -519,7 +519,7 @@
                 <div class="order__form-row order__form-row_quatro">
                   <label class="order__form-block">
                     <div class="order__form-label">Дом</div>
-                    <input class="order__form-input" name="home" type="number" placeholder="№" required>
+                    <input class="order__form-input" name="home" type="number" min="1" max="9999" placeholder="№" required>
                     <div class="order__form-error"></div>
                   </label>
                   <label class="order__form-block">
@@ -529,12 +529,12 @@
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Квартира</div>
-                    <input class="order__form-input" name="appt" type="number" placeholder="№" required>
+                    <input class="order__form-input" name="appt" type="number" min="1" max="9999" placeholder="№" required>
                     <div class="order__form-error"></div>
                   </label>
                   <label class="order__form-block">
                     <div class="order__form-label">Этаж</div>
-                    <input class="order__form-input" name="floor" type="number" placeholder="№" required>
+                    <input class="order__form-input" name="floor" type="number" min="1" max="9999" placeholder="№" required>
                     <div class="order__form-error"></div>
                   </label>
                 </div>
@@ -670,8 +670,7 @@
       <a class="status-popup__close btn" id="close-btn" href="#">Закрыть</a>
     </div>
   </div>
-
-<script src="./scripts/jquery-3.3.1.min.js"></script>
+  <script src="./scripts/jquery-3.3.1.min.js"></script>
 <script src="./scripts/script.js"></script>
 </body>
 
