--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
           </div>
           <ul class="slider__composition" id="composition-menu">
             <li>
-              <a class="full-review__close" href="#">
-                <svg class="full-review__close-btn">
+              <a class="slider__composition-close full-review__close" href="#">
+                <svg class="slider__composition-btn full-review__close-btn">
                   <use xlink:href="./img/sprite/sprite.svg#close"></use>
                 </svg>
               </a>
