--- a/index.html
+++ b/index.html
@@ -194,12 +194,66 @@
             </li>
           </ul>
           <div class="slider__left-item">
+          <div class="slider__left-structure">
             <a class="slider__structure" href="#" id="composition-open">
               <svg class="slider__icon-pic">
                 <use xlink:href="./img/sprite/sprite.svg#burger"></use>
               </svg>
               <div class="slider__item-text">состав</div>
             </a>
+            <ul class="slider__composition" id="composition-menu">
+              <li>
+                <a class="slider__composition-close" id="composition-close" href="#">
+                  <svg class="slider__composition-btn full-review__close-btn">
+                    <use xlink:href="./img/sprite/sprite.svg#close"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#beef"></use>
+                </svg>
+                <p class="slider__composition-text">Говядина</p>
+                <p class="slider__composition-size">300г</p>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#buns"></use>
+                </svg>
+                <p class="slider__composition-text">Булочки</p>
+                <p class="slider__composition-size">100г</p>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#salad"></use>
+                </svg>
+                <p class="slider__composition-text">Зелень</p>
+                <p class="slider__composition-size">70г</p>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#sauce"></use>
+                </svg>
+                <p class="slider__composition-text">Соус</p>
+                <p class="slider__composition-size">150г</p>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#cucumber"></use>
+                </svg>
+                <p class="slider__composition-text">Овощи</p>
+                <p class="slider__composition-size">200г</p>
+              </li>
+              <li class="slider__composition-item">
+                <svg class="slider__composition-icon">
+                  <use xlink:href="./img/sprite/sprite.svg#cheese"></use>
+                </svg>
+                <p class="slider__composition-text">Сыр</p>
+                <p class="slider__composition-size">80г</p>
+              </li>
+            </ul>
+          </div>
+            <div class="slider__left-calories">
             <a class="slider__calories" href="#">
               <svg class="slider__icon-pic">
                 <use xlink:href="./img/sprite/sprite.svg#kkal"></use>
@@ -208,57 +262,7 @@
               <div class="slider__item-text">ккал</div>
             </a>
           </div>
-          <ul class="slider__composition" id="composition-menu">
-            <li>
-              <a class="slider__composition-close full-review__close" href="#">
-                <svg class="slider__composition-btn full-review__close-btn">
-                  <use xlink:href="./img/sprite/sprite.svg#close"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#beef"></use>
-              </svg>
-              <p class="slider__composition-text">Говядина</p>
-              <p class="slider__composition-size">300г</p>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#buns"></use>
-              </svg>
-              <p class="slider__composition-text">Булочки</p>
-              <p class="slider__composition-size">100г</p>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#salad"></use>
-              </svg>
-              <p class="slider__composition-text">Зелень</p>
-              <p class="slider__composition-size">70г</p>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#sauce"></use>
-              </svg>
-              <p class="slider__composition-text">Соус</p>
-              <p class="slider__composition-size">150г</p>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#cucumber"></use>
-              </svg>
-              <p class="slider__composition-text">Овощи</p>
-              <p class="slider__composition-size">200г</p>
-            </li>
-            <li class="slider__composition-item">
-              <svg class="slider__composition-icon">
-                <use xlink:href="./img/sprite/sprite.svg#cheese"></use>
-              </svg>
-              <p class="slider__composition-text">Сыр</p>
-              <p class="slider__composition-size">80г</p>
-            </li>
-          </ul>
+        </div>
           <a class="right-arrow" href="#">
             <svg class="right-arrow__icon" id="right" style="fill: #fff">
               <use xlink:href="./img/sprite/sprite.svg#arrow-scroll"></use>
